--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
     <title>Spiritual Wandering</title>
 </head>
 <body>
+<a href="index.html" class="nodec">
 <header>
    
     <div id="logowtext">
@@ -19,7 +20,7 @@
 
    
 </header>
-
+</a>
 <main>
 
 <section> 
@@ -42,6 +43,7 @@
         <a href="agreement.html">Agreement</a>
     </div>
     <p id="copy">&copy; 2022 Spiritual Wandering, All Rights Reserved</p>
+    <br>
 </footer>
 
 <!--
