spacer replaced breaks

--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
     <a href="index.html" class="nodec">
         <button type="button">Home</button>
     </a>
-    <br><br><br><br>
+    <div class="spacer"></div>
 </section>
 
 
@@ -43,7 +43,7 @@
         <a href="agreement.html">Agreement</a>
     </div>
     <p id="copy">&copy; 2022 Spiritual Wandering, All Rights Reserved</p>
-    <br>
+    <div class="spacer"></div>
 </footer>
 
 <!--
