--- a/faq.html
+++ b/faq.html
@@ -98,7 +98,7 @@
         <a href="agreement.html">Agreement</a>
     </div>
     <p id="copy">&copy; 2022 Spiritual Wandering, All Rights Reserved</p>
-    <BR>
+    <div class="spacer"></div>
 </footer>
 
 </body>
