--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <a href="agreement.html">Agreement</a>
     </div>
     <p id="copy">&copy; 2022 Spiritual Wandering, All Rights Reserved</p>
-    <br>
+    <div class="spacer"></div>
 </footer>
 
 <!--
