added booking and agreement pages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 <section> 
     <p class="squish_text high_top justify">Are you ready to take the next steps on your spiritual journey?  Are you going through a season of discernment or deconstruction? Do you want help developing spiritual practices that feed your soul?  You could benefit from someone trained in holding sacred space and listening for the fingerprints of God in your narrative. Spiritual Wandering is a Spiritual Direction and Enneagram Coaching practice that aims to help you deepen your understanding of yourself and draw closer to the divine. </p>
     <p class="quote">“Spiritual direction aims to help us experience the eternal and the infinite aspects of our true nature through the wise, experienced and compassionate company of another human being.” - Spiritual Directors International</p>
-    <button type="button">Book Session</button>
+    <a href="booking.html" class="nodec">
+        <button type="button">Book Session</button>
+    </a>
+    
 </section>
 
 <section class="col">
