--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Spiritual Wandering</title>
+    <link rel="icon" type="image/x-icon" href="assets/SWFavicon.png">
 </head>
 <body>
 <a href="index.html" class="nodec">
