--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Spiritual Wandering</title>
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico?v=2" />
 </head>
 <body>
 <a href="index.html" class="nodec">
