--- a/booking.html
+++ b/booking.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Spiritual Wandering</title>
-    <link rel="icon" href="assets/SWFavicon.png">
+    <link rel="icon" href="favicon.ico?v=2" />
 </head>
 
 <body>
