--- a/booking.html
+++ b/booking.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="style.css">
     <title>Spiritual Wandering</title>
     <link rel="icon" href="favicon.ico?v=2" />
+    
+    <!-- Calendly link widget begin -->
+<link 
+href="https://calendly.com/assets/external/widget.css" 
+rel="stylesheet">
+<script 
+src="https://calendly.com/assets/external/widget.js" 
+type="text/javascript"></script>
+<!-- Calendly link widget end -->
+
 </head>
 
 <body>
@@ -58,6 +68,25 @@
     
     <div class="spacer"></div>
 </section>
+
+<section class="col small_col">
+    <div class="divbutton" onclick="Calendly.initPopupWidget({url:'https://calendly.com/spiritualwandering/60min'}); return false;">
+        <img class="smlogo" src="assets/logo.png" alt="Triquetra & Labyrinth Logo">
+        <a href="https://calendly.com/spiritualwandering/60min">
+            <h3>60 Minute Session</h3>
+        </a>
+        <p>This is a full 45-60 Minute Session for Enneagram Coaching or Spiritual Direction. The cost of the session is $60 unless other arrangements were discussed beforehand.</p>
+    </div>
+    <div class="divbutton" onclick="Calendly.initPopupWidget({url:'https://calendly.com/spiritualwandering/free-consultation'}); return false;">
+        <img class="smlogo" src="assets/logo.png" alt="Triquetra & Labyrinth Logo">
+        <a href="https://calendly.com/spiritualwandering/free-consultation">
+            <h3>15 Minute Consultation</h3>
+        </a>
+        <p>This is a short, 15-minute, complimentary consultation to answer any questions you might have about Spiritual Direction or Enneagram Coaching</p>
+</div>
+</section>
+
+
 </main>
 <footer>
     <div class="flex_foot">
