--- a/booking.html
+++ b/booking.html
@@ -40,7 +40,7 @@ type="text/javascript"></script>
 <main>
 <section> 
     <h3 class="center">Book a Session</h3>
-    <p>You can book a Spiritual Direction or Enneagram Coaching session below.  The sessions are each 45-60 minutes long.  My standard rate is $60 for each session, but I believe that everyone should have access to these practices, so let me know if we need to discuss a needs-based modified fee.  I can also meet at special locations, by request, for a small fee.  I block off 15 minutes before and after each session for prayer and reflection to ensure that you have my undivided attention during our time together.  Please be sure to bring a topic that you would like to explore.  If you need an idea of what we can talk about, check out our <a href="faq.html">F.A.Q.</a></p>
+    <p>You can book a Spiritual Direction or Enneagram Coaching session below.  The sessions are each 45-60 minutes long.  My standard rate is $60 for each session, but I believe that everyone should have access to these practices, so let me know if we need to discuss a needs-based modified fee.  I can also meet at special locations, by request, for a small fee.  You can book a free 15-minute consultation with me if you have questions or special requests.  I block off 15 minutes before and after each standard session for prayer and reflection to ensure that you have my undivided attention during our time together.  Please be sure to bring a topic that you would like to explore.  If you need an idea of what we can talk about, check out our <a href="faq.html">F.A.Q.</a></p>
 
             
     <div class="calendly-inline-widget" data-url="https://calendly.com/spiritualwandering/60min"></div>
