Added padding, meta tags, and minor flex updates

--- a/404.html
+++ b/404.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Spiritual Wandering</title>
+    <title>404 Error | Spiritual Wandering</title>
     <link rel="icon" href="favicon.ico?v=2" />
+    <meta name="robots" content="noarchive, noindex">
 </head>
 <body>
 <a href="index.html" class="nodec">
@@ -16,7 +17,7 @@
     </div>
         
     <div id="logotagline">
-        <h2>not all who wander are lost, but all who wonder are found</h2>
+        <h5>not all who wander are lost, but all who wonder are found</h5>
     </div>
 
    
@@ -25,7 +26,7 @@
 <main>
 
 <section> 
-    <h3 class="center">404 Error</h3>
+    <h1 class="center">404 Error</h1>
     <p class="center">We are sorry, the page you were looking for cannot be found.  Click the button below to go to the Home Page. </p>
     <br>
     <a href="index.html" class="nodec">
