--- a/agreement.html
+++ b/agreement.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Spiritual Wandering</title>
+    <title>Service Agreement | Spiritual Wandering</title>
     <link rel="icon" href="favicon.ico?v=2" />
+    <meta name="description" content="Sign this service agreement before your first session. Take the next step on your spiritual journey with Spiritual Direction">
+    <link rel="canonical" href="https://spiritualwandering.com/agreement/" />
 </head>
 
 <body>
@@ -20,7 +22,7 @@
     
         
     <div id="logotagline">
-        <h2>not all who wander are lost, but all who wonder are found</h2>
+        <h5>not all who wander are lost, but all who wonder are found</h5>
     </div>
 
    
@@ -29,7 +31,7 @@
 
 <main>
 <section> 
-    <h3 class="center">Agreement</h3>
+    <h1 class="center">Agreement</h1>
     <p>The following agreement is used for both Spiritual Direction and Enneagram Coaching.  It covers confidentiality, our cancellation policy, and a basic disclaimer stating that you understand that I am not a clinician and these services are not therapy.  Before your first session, please review and complete the following form.  After completing the form the system will send you a copy of the form and your answers.</p>
 
     <iframe id="agreement" src="https://docs.google.com/forms/d/e/1FAIpQLScrldddZHX8JymQyi4BVv7Jcg_4Rjfq8yBxkuW888EojhZ_CQ/viewform?embedded=true">Loading…</iframe>
