--- a/faq.html
+++ b/faq.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Spiritual Wandering</title>
+    <title>F.A.Q. | Spiritual Wandering</title>
     <link rel="icon" href="favicon.ico?v=2" />
+    <meta name="description" content="Frequently asked questions about Spiritual Direction and Enneagram Coaching.  Learn more before booking your first session.">
+    <link rel="canonical" href="https://spiritualwandering.com/faq/" />
 </head>
 <body>
 <a href="index.html" class="nodec">
@@ -19,7 +21,7 @@
     
         
     <div id="logotagline">
-        <h2>not all who wander are lost, but all who wonder are found</h2>
+        <h5>not all who wander are lost, but all who wonder are found</h5>
     </div>
 
    
@@ -27,50 +29,51 @@
 </a>
 
 <main>
-<h3 class="center">Frequently Asked Questions</h3>
-<h4>How long are the sessions?</h4>
+<section>
+<h1 class="center">Frequently Asked Questions</h1>
+<h3>How long are the sessions?</h3>
 <p class="squish_text">
     We typically meet for 45-60 minutes.
 <br></p>
 
-<h4>How much does it cost?</h4>
+<h3>How much does it cost?</h3>
 <p class="squish_text">
     My standard rate is $60 for each session, but I believe that everyone should have access to these practices, so let me know if we need to discuss a needs-based modified fee. 
 <br></p>
 
-<h4>How often will we meet?</h4>
+<h3>How often will we meet?</h3>
 <p class="squish_text">
     Spiritual Direction is traditionally a long-term once-a-month practice.  I see clients weekly, bi-weekly, and monthly depending on their needs.  Enneagram Coaching is often done on a short-term weekly basis, but since I often do Enneagram Coaching in conjunction with Spiritual Direction I am willing to schedule monthly or bi-weekly as well. 
 <br></p>
 
-<h4>Where do we meet?</h4>
+<h3>Where do we meet?</h3>
 <p class="squish_text">
     The booking page will allow you to schedule sessions in-person at Lifejourney Church, online via Zoom, or by phone.  LifeJourney Church is East of Broad Ripple, near Keystone & 56th.  The address is 2950 E. 55th Place, Indianapolis, IN 46220.  I have a private meeting space set up and ready for you at that location.  Additionally, by request, we can schedule to meet at the Benedict Inn in Beech Grove, your church location if they are willing to share their space, my home in Fountain Square, or your home or office.  In order to set the right tone for our session the space needs to be quiet, private, comfortable, and be free of distractions.  I charge an additional $20 to meet at a special location like your home or office.  
 <br></p>
 
-<h4>Is what I say confidential/private?</h4>
+<h3>Is what I say confidential/private?</h3>
 <p class="squish_text">
     The Director/Directee relationship is a sacred and protected relationship that is pastoral in nature.  As an ordained clergy member, our conversations are protected by Priest-Penitent Privilege.  Conversations will be held in strict confidence unless you specify otherwise in writing, or I am required to share or report by law.  For example, the law does require the reporting of any information that indicates a danger to self or others, or involvement in any kind of abuse or neglect, especially if minors are involved.  
 <br></p>
 
-<h4>What happens in a session?</h4>
+<h3>What happens in a session?</h3>
 <p class="squish_text">
     Each session begins with a centering practice so that we can separate our time together as sacred.  This practice helps us to let go of the daily concerns and go deeper within.  You may bring your own centering practice, or be guided through a practice chosen for you.  After that, you are invited to share whatever topic you have brought for us to explore together.  The pace of the conversation will be intentionally slower than a conversation with a friend might be.  This ensures that we are listening to each other instead of thinking about how we will respond.  You may be invited into moments of silence or asked to pause and sit with emotions and body feelings.  These exercises may feel uncomfortable at first, but they help you to connect to a deeper understanding. 
 <br></p>
 
-<h4>What can we explore?</h4>
+<h3>What can we explore?</h3>
 <p class="squish_text">
     In Spiritual Direction, we can explore a variety of topics.  Sometimes our conversation will carry over from session to session, but most of the time we focus on whatever comes to the surface that week.  Each session you are asked to bring a topic that you would like to explore.  Topics include, but are not limited to, the following:  your faith, prayer life, spiritual practices, life transitions, discernment, emotional peaks & valleys, challenges, doubts & questions, grounding, meaning & purpose, grief & loss, and much more.  As we explore the given topic we may wander back to old conversations, but we are always watching for the evidence of the fingerprints of God so that we can highlight what God is doing in your life. 
 <br>
     In Enneagram Coaching, we can work together to identify your type if you don't already know it.  Once we know your type we can explore the patterns of that type and how they apply to your life.  We can explore wings, subtypes, instincts, and your type center.  We can explore your resource and stress points.  We can work to understand your virtues, vices, and holy ideals.  We can talk about relationships at home and work and how those are influenced by the Enneagram patterns.  Once we have a firm understanding of our patterns we start to work towards shaking those patterns loose so that we can live responsively instead of reactively.  
 <br></p>
 
-<h4>Do I have to be religious?</h4>
+<h3>Do I have to be religious?</h3>
 <p class="squish_text">
     Both Spiritual Direction and Enneagram Coaching are spiritual but not religious.  While I come from the Celtic Christian tradition, and that informs the way that I practice, I also enjoy working with people from all spiritual paths.  At the core, these are listening practices where we listen together for God, however you may view God.  For this reason, it is not mandatory that our faith journeys align.  If I am unfamiliar with your faith practice, I will likely ask questions to make sure I know how you talk about God, and how I can ask the sort of questions that you will find most helpful. 
 <br></p>
 
-<h4>Is this counseling/therapy?</h4>
+<h3>Is this counseling/therapy?</h3>
 <p class="squish_text">
     While Spiritual Direction & Enneagram Coaching may be therapeutic, it is not therapy.  Therapy is defined as a treatment that is intended to relieve or heal a disorder.  Spiritual Direction & Enneagram Coaching may be healing practices, but they are not designed to treat any kind of medical or mental health disorder.  Therapy and counseling both start with the assumption that something is wrong and they work to treat, relieve, or fix that disorder.  Spiritual Direction & Enneagram Coaching don't aim to find a problem to solve, they are centering and listening practices and if any healing takes place it is due to the relationship between the client and the Spirit. 
     <br><br>
@@ -80,7 +83,7 @@
 <img src="assets/Modalities Chart.png" alt="This is a chart that compares the modalities of Counseling, Life Coaching, Spiritual Direction, and Enneagram Coaching." id="modalities">
 <br>
 
-<h3 class="center">Have Additional Questions?</h3>
+<h2 class="center">Have Additional Questions?</h2>
 <p class="center">
     If you have additional questions before booking your first session please reach out to Chris Edwards by email: Chris@spiritualwandering.com or by phone at (828) 545-3503.  
 </p>
@@ -89,7 +92,7 @@
 </a>
 
 <div class="spacer"></div>
-
+</section>
 </main>
 <footer>
     <div class="flex_foot">
