--- a/404.html
+++ b/404.html
@@ -7,6 +7,17 @@
     <title>404 Error | Spiritual Wandering</title>
     <link rel="icon" href="favicon.ico?v=2" />
     <meta name="robots" content="noarchive, noindex">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YG1CM7DT2K"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-YG1CM7DT2K');
+    </script>
+
 </head>
 <body>
 <a href="index.html" class="nodec">
