--- a/agreement.html
+++ b/agreement.html
@@ -8,6 +8,17 @@
     <link rel="icon" href="favicon.ico?v=2" />
     <meta name="description" content="Sign this service agreement before your first session. Take the next step on your spiritual journey with Spiritual Direction">
     <link rel="canonical" href="https://spiritualwandering.com/agreement/" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YG1CM7DT2K"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-YG1CM7DT2K');
+    </script>
+
 </head>
 
 <body>
