--- a/faq.html
+++ b/faq.html
@@ -8,6 +8,16 @@
     <link rel="icon" href="favicon.ico?v=2" />
     <meta name="description" content="Frequently asked questions about Spiritual Direction and Enneagram Coaching.  Learn more before booking your first session.">
     <link rel="canonical" href="https://spiritualwandering.com/faq/" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YG1CM7DT2K"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-YG1CM7DT2K');
+    </script>
 </head>
 <body>
 <a href="index.html" class="nodec">
