--- a/booking.html
+++ b/booking.html
@@ -8,15 +8,25 @@
     <link rel="icon" href="favicon.ico?v=2" />
     <meta name="description" content="Book a session to take the next step on your spiritual journey.  Sessions are offered online via Zoom and in person in Indianapolis, IN.">
     <link rel="canonical" href="https://spiritualwandering.com/booking/" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YG1CM7DT2K"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-YG1CM7DT2K');
+    </script>
     
-<!-- Calendly link widget begin -->
-<link 
-href="https://calendly.com/assets/external/widget.css" 
-rel="stylesheet">
-<script 
-src="https://calendly.com/assets/external/widget.js" 
-type="text/javascript"></script>
-<!-- Calendly link widget end -->
+    <!-- Calendly link widget begin -->
+    <link 
+    href="https://calendly.com/assets/external/widget.css" 
+    rel="stylesheet">
+    <script 
+    src="https://calendly.com/assets/external/widget.js" 
+    type="text/javascript"></script>
+    <!-- Calendly link widget end -->
 
 </head>
 
