--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="icon" href="favicon.ico?v=2" />
     <meta name="description" content="Take the next step on your spiritual journey with Spiritual Direction and Enneagram Coaching in Indianapolis or virtually via Zoom.">
     <link rel="canonical" href="https://spiritualwandering.com/" />
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-YG1CM7DT2K"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YG1CM7DT2K');
+        </script>
 </head>
 <body>
 <a href="index.html" class="nodec">
