social picture sizing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Spiritual Wandering</title>
     <link rel="icon" href="favicon.ico?v=2" />
     <meta name="description" content="Take the next step on your spiritual journey with Spiritual Direction and Enneagram Coaching in Indianapolis or virtually via Zoom.">
-    <meta property="og:image" content="SWSocial.png">
+    <meta property="og:image" content="assets/SWSocial.png">
+    <meta property="og:image:width" content="940">
+    <meta property="og:image:height" content="788">
     <link rel="canonical" href="https://spiritualwandering.com/" />
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -74,7 +76,7 @@
     <div>
         <H2 class="center big_screen_only">About Me</H2>
         <P>Chris Edwards is a Spiritual Director, Enneagram Coach, and a Priest in the Celtic Christian Tradition.  At this point, he is essentially a free-range pastor with more than 20 years of experience in leading faith communities and guiding spiritual formation.  He wants nothing more than to help people discover the joy of contemplative practice and the overwhelming, never-ending, reckless love of God.
-        <br><br>Chris especially connects with people who are going through deconstruction and working to find stable footing when it feels like their whole faith structure is crumbling around them.  He also specializes in Spiritual Direction with youth and children.  </p>
+        <br><br>Chris especially connects with people who are going through deconstruction and working to find stable footing when it feels like their whole faith structure is crumbling around them.  </p>
     </div>
 </section>
 </main>
