testing wider image

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Spiritual Wandering</title>
     <link rel="icon" href="favicon.ico?v=2" />
     <meta name="description" content="Take the next step on your spiritual journey with Spiritual Direction and Enneagram Coaching in Indianapolis or virtually via Zoom.">
-    <meta property="og:image" content="assets/SWSocial.png">
-    <meta property="og:image:width" content="940">
-    <meta property="og:image:height" content="788">
+    <meta property="og:image" content="assets/SWSocial2.png">
     <link rel="canonical" href="https://spiritualwandering.com/" />
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
