--- a/booking.html
+++ b/booking.html
@@ -33,7 +33,7 @@
 <body>
 <a href="index.html" class="nodec">
 <header>
-    
+    <div class="header-background">
     <div id="logowtext">
         
         <img src="assets/SWLOGOwText.png" alt="Spiritual Wandering in Celtic Script with the Triquetra & Labyrinth Logo in place of the A">
@@ -44,13 +44,24 @@
     <div id="logotagline">
         <h5>not all who wander are lost, but all who wonder are found</h5>
     </div>
-
+    </div>
    
 </header>
 </a>
 
 <main>
-<section> 
+
+<nav>   
+    <ul>
+        <a href="index.html"><li>Home</li></a>
+        <a href="booking.html"><li>Booking</li></a>
+        <!--<li>About Me</li> -->
+        <a href="faq.html"><li>F.A.Q.</li></a>     
+        <!-- <li>Contact</li> -->
+    </ul> 
+</nav>
+
+<section class="high_top"> 
     <h1 class="center">Book a Session</h1>
     <p>You can book a Spiritual Direction or Enneagram Coaching session below.  The sessions are each 45-60 minutes long.  My standard rate is $60 for each session, but I believe that everyone should have access to these practices, so let me know if we need to discuss a needs-based modified fee.  I can also meet at special locations, by request, for a small fee.  You can book a free 15-minute consultation with me if you have questions or special requests.  I block off 15 minutes before and after each standard session for prayer and reflection to ensure that you have my undivided attention during our time together.  Please be sure to bring a topic that you would like to explore.  If you need an idea of what we can talk about, check out our <a href="faq.html">F.A.Q.</a></p>
 </section>
