--- a/agreement.html
+++ b/agreement.html
@@ -24,7 +24,7 @@
 <body>
 <a href="index.html" class="nodec">
 <header>
-    
+    <div class="header-background">
     <div id="logowtext">
         
         <img src="assets/SWLOGOwText.png" alt="Spiritual Wandering in Celtic Script with the Triquetra & Labyrinth Logo in place of the A">
@@ -35,13 +35,24 @@
     <div id="logotagline">
         <h5>not all who wander are lost, but all who wonder are found</h5>
     </div>
-
+    </div>
    
 </header>
 </a>
 
 <main>
-<section> 
+
+<nav>   
+    <ul>
+        <a href="index.html"><li>Home</li></a>
+        <a href="booking.html"><li>Booking</li></a>
+        <!--<li>About Me</li> -->
+        <a href="faq.html"><li>F.A.Q.</li></a>     
+        <!-- <li>Contact</li> -->
+    </ul> 
+</nav>
+
+<section class="high_top"> 
     <h1 class="center">Agreement</h1>
     <p>The following agreement is used for both Spiritual Direction and Enneagram Coaching.  It covers confidentiality, our cancellation policy, and a basic disclaimer stating that you understand that I am not a clinician and these services are not therapy.  Before your first session, please review and complete the following form.  After completing the form the system will send you a copy of the form and your answers.</p>
 
