--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@
 <body>
 <a href="index.html" class="nodec">
 <header>
-    
+    <div class="header-background">
     <div id="logowtext">
         
         <img src="assets/SWLOGOwText.png" alt="Spiritual Wandering in Celtic Script with the Triquetra & Labyrinth Logo in place of the A">
@@ -33,13 +33,24 @@
     <div id="logotagline">
         <h5>not all who wander are lost, but all who wonder are found</h5>
     </div>
-
+    </div>
    
 </header>
 </a>
 
 <main>
-<section>
+
+<nav>   
+    <ul>
+        <a href="index.html"><li>Home</li></a>
+        <a href="booking.html"><li>Booking</li></a>
+        <!--<li>About Me</li> -->
+        <a href="faq.html"><li>F.A.Q.</li></a>     
+        <!-- <li>Contact</li> -->
+    </ul> 
+</nav>
+
+<section class="high_top">
 <h1 class="center">Frequently Asked Questions</h1>
 <h3>How long are the sessions?</h3>
 <p class="squish_text">
