add 2023 copyright, speaking engagements, and update locations

--- a/booking.html
+++ b/booking.html
@@ -63,7 +63,7 @@
 
 <section class="high_top"> 
     <h1 class="center">Book a Session</h1>
-    <p>You can book a Spiritual Direction or Enneagram Coaching session below.  The sessions are each 45-60 minutes long.  My standard rate is $60 for each session, but I believe that everyone should have access to these practices, so let me know if we need to discuss a needs-based modified fee.  I can also meet at special locations, by request, for a small fee.  You can book a free 15-minute consultation with me if you have questions or special requests.  I block off 15 minutes before and after each standard session for prayer and reflection to ensure that you have my undivided attention during our time together.  Please be sure to bring a topic that you would like to explore.  If you need an idea of what we can talk about, check out our <a href="faq.html">F.A.Q.</a></p>
+    <p>You can book a Spiritual Direction or Enneagram Coaching session below.  The sessions are each 45-60 minutes long.  My standard rate is $75 for each session, but I believe that everyone should have access to these practices, so let me know if we need to discuss a needs-based modified fee.  I can also meet at special locations, by request, for a small fee.  You can book a free 15-minute consultation with me if you have questions or special requests.  I block off 15 minutes before and after each standard session for prayer and reflection to ensure that you have my undivided attention during our time together.  Please be sure to bring a topic that you would like to explore.  If you need an idea of what we can talk about, check out our <a href="faq.html">F.A.Q.</a></p>
 </section>
     <!--        
     <div class="calendly-inline-widget" data-url="https://calendly.com/spiritualwandering/60min"></div>
@@ -77,7 +77,7 @@
             <a href="https://calendly.com/spiritualwandering/60min">
                 <h2>60 Minute Session</h2>
             </a>
-            <p>This is a full 45-60 Minute Session for Enneagram Coaching or Spiritual Direction. The cost of the session is $60 unless other arrangements were discussed beforehand.</p>
+            <p>This is a full 45-60 Minute Session for Enneagram Coaching or Spiritual Direction. The cost of the session is $75 unless other arrangements were discussed beforehand.</p>
         </div>
         <div class="divbutton" onclick="Calendly.initPopupWidget({url:'https://calendly.com/spiritualwandering/free-consultation'}); return false;">
             <img class="smlogo" src="assets/logo.png" alt="Triquetra & Labyrinth Logo">
@@ -112,7 +112,21 @@
     <div class="spacer"></div>
 </section>
 
-
+<section id="speaking"> 
+    <h1 class="center">Speaking Engagements</h1>
+    <p>Father Chris occasionally takes on speaking engagements on topics like Spiritual Direction, spiritual practices, deconstruction, or the Enneagram.  Here are a few of the talks that Father Chris has delivered recently. </p>
+        <ul>
+        <li><strong>"Body Language Awareness in Spiritual Direction"</strong> at the <a href="https://www.benedictinn.org/spiritual-direction" target="_blank">Benedict Inn and Retreat Center</a> for their Spiritual Director Training Program.</li>
+        <li><strong>"The Enneagram as a Tool for Spiritual Directors"</strong> at the <a href="https://www.fallcreekabbey.org/" target="_blank">Fall Creek Abbey</a> for their Spiritual Director Training Cohort.</li>
+        <li><strong>"Enneagram, Personality Types, and the Four Tendencies"</strong> at <a href="https://lifejourney.church/" target="_blank">LifeJourney Church</a>.</li>
+        <li><strong>"Spirituality Practices of Recovery"</strong> at <a href="https://recoverycentersofamerica.com/locations/indianapolis/" target="_blank">Recovery Centers of America</a>.</li>
+        <li><strong>"Recovery as a Spiritual Practice"</strong> at <a href="https://www.recoverycafeindy.org/" target="_blank">Recovery Cafe Indy</a>.</li>
+        <li><strong>"Monastic Practices for a Modern World"</strong> at <a href="https://lifejourney.church/" target="_blank">LifeJourney Church</a>.</li>
+        <li><strong>"The Basics of the Labyrinth as a Spiritual Practice"</strong> for the <a href="https://www.facebook.com/prospectfallsneighborhoodassociation/" target="_blank">Prospect Falls Neighborhood Association</a>.</li>
+        </ul>
+        <p>You can inquire about booking a speaking engagement by reaching out via email at <a href="mailto:chris@spiritualwandering.com">chris@spiritualwandering.com</a>.</p>    
+        <div class="spacer"></div>
+</section>
 
 
 </main>
@@ -123,7 +137,7 @@
         <a href="faq.html">F.A.Q.</a>
         <a href="agreement.html">Agreement</a>
     </div>
-    <p id="copy">&copy; 2022 Spiritual Wandering, All Rights Reserved</p>
+    <p id="copy">&copy; 2023 Spiritual Wandering, All Rights Reserved</p>
     <div class="spacer"></div>
 </footer>
 
