--- a/faq.html
+++ b/faq.html
@@ -59,7 +59,7 @@
 
 <h3>How much does it cost?</h3>
 <p class="squish_text">
-    My standard rate is $60 for each session, but I believe that everyone should have access to these practices, so let me know if we need to discuss a needs-based modified fee. 
+    My standard rate is $75 for each session, but I believe that everyone should have access to these practices, so let me know if we need to discuss a needs-based modified fee. 
 <br></p>
 
 <h3>How often will we meet?</h3>
@@ -69,7 +69,7 @@
 
 <h3>Where do we meet?</h3>
 <p class="squish_text">
-    The booking page will allow you to schedule sessions in-person at Lifejourney Church, online via Zoom, or by phone.  LifeJourney Church is East of Broad Ripple, near Keystone & 56th.  The address is 2950 E. 55th Place, Indianapolis, IN 46220.  I have a private meeting space set up and ready for you at that location.  Additionally, by request, we can schedule to meet at the Benedict Inn in Beech Grove, your church location if they are willing to share their space, my home in Fountain Square, or your home or office.  In order to set the right tone for our session the space needs to be quiet, private, comfortable, and be free of distractions.  I charge an additional $20 to meet at a special location like your home or office.  
+    The booking page will allow you to schedule sessions in-person at my home office in Fountain Square, online via Google Meet, or by phone.  Additionally, by request, for an additional fee of $20, we can schedule to meet at a special location.  Previous arrangements have been made at the Benedict Inn in Beech Grove, LifeJourney Church East of Broad Ripple, and at Christian Theological Seminary North of Downtown Indy.  We could also arrange to meet at your own church if they are willing to share their space, or in  your own home or office.  In order to set the right tone for our session the space needs to be quiet, private, comfortable, and be free of distractions.  Reach out to me via email at chris@spiritualwandering.com to arrange a meeting in a special location.     
 <br></p>
 
 <h3>Is what I say confidential/private?</h3>
@@ -85,7 +85,7 @@
 <h3>What can we explore?</h3>
 <p class="squish_text">
     In Spiritual Direction, we can explore a variety of topics.  Sometimes our conversation will carry over from session to session, but most of the time we focus on whatever comes to the surface that week.  Each session you are asked to bring a topic that you would like to explore.  Topics include, but are not limited to, the following:  your faith, prayer life, spiritual practices, life transitions, discernment, emotional peaks & valleys, challenges, doubts & questions, grounding, meaning & purpose, grief & loss, and much more.  As we explore the given topic we may wander back to old conversations, but we are always watching for the evidence of the fingerprints of God so that we can highlight what God is doing in your life. 
-<br>
+<br><br>
     In Enneagram Coaching, we can work together to identify your type if you don't already know it.  Once we know your type we can explore the patterns of that type and how they apply to your life.  We can explore wings, subtypes, instincts, and your type center.  We can explore your resource and stress points.  We can work to understand your virtues, vices, and holy ideals.  We can talk about relationships at home and work and how those are influenced by the Enneagram patterns.  Once we have a firm understanding of our patterns we start to work towards shaking those patterns loose so that we can live responsively instead of reactively.  
 <br></p>
 
@@ -122,7 +122,7 @@
         <a href="faq.html">F.A.Q.</a>
         <a href="agreement.html">Agreement</a>
     </div>
-    <p id="copy">&copy; 2022 Spiritual Wandering, All Rights Reserved</p>
+    <p id="copy">&copy; 2023 Spiritual Wandering, All Rights Reserved</p>
     <div class="spacer"></div>
 </footer>
 
