--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <H2 class="center big_screen_only">About Me</H2>
         <P>Chris Edwards is a Spiritual Director, Enneagram Coach, and a Priest in the Celtic Christian Tradition.  At this point, he is essentially a free-range pastor with more than 20 years of experience in leading faith communities and guiding spiritual formation.  He wants nothing more than to help people discover the joy of contemplative practice and the overwhelming, never-ending, reckless love of God.
         <br><br>Chris especially connects with people who are going through deconstruction and working to find stable footing when it feels like their whole faith structure is crumbling around them.  </p>
+        <p>Learn about speaking engagements with Chris <a href="booking.html#speaking">here</a></p>
     </div>
 </section>
 </main>
@@ -102,7 +103,7 @@
         <a href="faq.html">F.A.Q.</a>
         <a href="agreement.html">Agreement</a>
     </div>
-    <p id="copy">&copy; 2022 Spiritual Wandering, All Rights Reserved</p>
+    <p id="copy">&copy; 2023 Spiritual Wandering, All Rights Reserved</p>
     <div class="spacer"></div>
 </footer>
 
