add mailto on faq

--- a/faq.html
+++ b/faq.html
@@ -106,7 +106,7 @@
 
 <h2 class="center">Have Additional Questions?</h2>
 <p class="center">
-    If you have additional questions before booking your first session please reach out to Chris Edwards by email: Chris@spiritualwandering.com or by phone at (828) 545-3503.  
+    If you have additional questions before booking your first session please reach out to Chris Edwards by email: <a href="mailto:chris@spiritualwandering.com">chris@spiritualwandering.com</a> or by phone at (828) 545-3503.  
 </p>
 <a href="index.html" class="nodec">
 <button type="button">Home</button>
